CSS Spacing fix

--- a/sgem-stock-profit-calculator/assets/css/spc-cal-calculator.css
+++ b/sgem-stock-profit-calculator/assets/css/spc-cal-calculator.css
@@ -73,7 +73,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
-    padding-bottom: 28px;
+    padding-bottom: 24px;
     position: relative;
     /*padding-right: 10px;*/
    /* column-gap: 24px;*/
